# sysrat

./: .envrc  Cargo.toml  LICENSE  README.md  execsnoop.bpf  execsnoop.d  flake.nix
.cargo/: config.toml
ebpf/: README.md
ebpf/common/: Cargo.toml
ebpf/common/src/: lib.rs
ebpf/ebpf/: Cargo.toml
ebpf/ebpf-kernel/: Cargo.toml
ebpf/ebpf-kernel/src/: execve_args.rs  lib.rs  main.rs
ebpf/ebpf/src/: vmlinux.rs
ebpf/userland/: Cargo.toml  build.rs
ebpf/userland/src/: main.rs
src/: app.rs  event.rs  main.rs  ui.rs
tui/: Cargo.toml
tui/src/: app.rs  event.rs  main.rs  process_service.rs  ui.rs
