[package]
name = "sysrat"
version = "0.1.0"
authors = ["FlakM <maciej.jan.flak@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"

anyhow = "1.0.97"
chrono = "0.4.40"
colored = "3.0.0"
duct = "0.13.7"
unicode-width = "0.2.0"
itertools = "0.14.0"
sysinfo = "0.33.1"
